stylesheets/style.css
body {
    /* background-color: #2c222d;
    background-image: url(../images/54483.jpg); */
    color: black;
    font-family: 'Quicksand', sans-serif;
    font-size: 18px;
}

.menu {
    padding: 10px;
    text-align: center;
    color: black;
    background-color: #c3c5cb;
    border-radius: 15px;
    width: 40%;
    margin: auto;
}

.header {
    margin-top: 30px;
    margin-bottom: 30px;
    padding: 0px 0px;
    display: block;
}

.button {
    border-radius: 15px;
    text-align: center;
    color: #c3c5cb;
    background-color: #181b1f;
    padding: 10px;
    align-content: right;
    font-size: 18px;
}

.button:hover, .button:focus, .button:active {
    color: white !important;

}

#generate-link, #donate-token {
    padding: 3%;
    text-align: left;
    color: black;
    background-color: #c3c5cb;
    border-radius: 15px;
    width: 60%;
    margin: auto;
}

.inputs {
    /* background-color: #222429; */
    padding: 5px;
    text-align: left;
    border-radius: 15px;
    margin: 10px 0;
}

input {
    float: right;
    background-color: white;
    text-align: right;
    border: 0;
    border-radius: 5px;
}

input:focus {
    outline: none;
}

.submit {
    margin: auto;
    border: none;
    border-radius: 15px;
    padding: 10px 30px;
    width: 100%;
    color: white;
}

.header-button {
    background-color: #c3c5cb;
    border: 0;
    text-decoration: none;
    color: black;
    padding: 10px;
    border-radius: 15px;
}

a:hover, a:focus {
    text-decoration: none;
    color: black;
    background-color: white;
}

.menu a.clicked {
    text-decoration: none;
    color: black;
    background-color: white;
}
  
  @media screen and (max-width: 700px) {
    body {
        font-size: 12px !important;
    }
    .button {
        font-size: 12px !important;
        float: right;
        margin: 20px 0;
    }
    .menu {
        width: 60% !important;
        margin: 0;
        position: fixed !important;
        bottom: 20px !important;
    }
    .header {
        width: 90% !important;
        margin: auto !important;
    }
    .header-button {
        padding: 10px;

        display: inline-block !important;
    }
    #generate-link, #donate-token {
        padding: 3%;
        text-align: left;
        color: black;
        background-color: #c3c5cb;
        border-radius: 15px;
        width: 100% !important;
        margin: auto;
    }
    }

